--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
     "outDir": "./build"
   },
-  "include": ["./src"],
+  "include": ["2022"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
